<resources>
    <string name="app_name">Hangman 666</string>
    <string name="guessText">Guess</string>
    <string name="StartGameText">Start Game!</string>
    <string name="initDesc">initial state</string>
    <string name="addHead">add head</string>
    <string name="addBody">draw body</string>
    <string name="addArms">add arms</string>
    <string name="addLegs">add legs</string>
    <string name="highScore">HIGH SCORES</string>
    <string name="settings_name">Settings</string>
    <string name="toggleEvil">Evil Game Play</string>
    <string name="wordLen">Word length: </string>
    <string name="guesses">Guesses permitted: </string>
    <string name="newGame">New Game</string>
    <string name="chetaHint">Cheat code</string>
    <string name="wordLenGGP">Words of all lengths in GGP?</string>
    <string name="uLoseString">YOU LOSE</string>
</resources>
